...
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="5dp">

        <LinearLayout
            android:id="@+id/s1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:background="#cd4b4b"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#d35d5d"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="4dp">
                        <TextView
                            android:id="@+id/report_title_cont_y1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Actual title"
                            android:paddingVertical="2dp"
                            android:paddingHorizontal="4dp"
                            android:textColor="#ccfafafa"
...
                            android:text="3. Facility id:"
                            android:layout_marginVertical="2dp"
                            android:textColor="#fafafa"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/facility_id_org_cont_y1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Original facility type"
                            android:textColor="#ccfafafa"
                            android:background="#d35d5d"
                            android:textSize="15sp"
...

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#d35d5d">
                            <TextView
                                android:id="@+id/reporter_id_cont_y1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Reporter is:"
                                android:textColor="#ccfafafa"
                                android:background="#d35d5d"
                                android:scrollHorizontally="true"
...

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#d35d5d">
                            <TextView
                                android:id="@+id/reported_id_cont_y1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="User being report is :"
                                android:textColor="#ccfafafa"
                                android:background="#d35d5d"
                                android:textSize="15sp"
...
                        android:paddingVertical="2dp"
                        android:layout_marginTop="3dp"
                        android:text="7. Reason:"
                        android:textColor="#fafafa"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/reported_reason_cont_y1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Reason is:\nReason is:"
                        android:scrollbars="vertical"
                        android:textColor="#ccfafafa"
                        android:background="#d35d5d"
...
                        android:textColor="#FFFFFF"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="50dp"/>

                    <Button
                        android:id="@+id/reportApprove_y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Approve"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:textColor="#fafafa"
...
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="5dp">

        <LinearLayout
            android:id="@+id/s2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:background="#cd4b4b"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/reportNot_y2"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reject"
                        android:textStyle="bold"
                        android:textSize="18sp"
...
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:elevation="6dp"
            android:backgroundTint="@color/black"
            app:tint="#fafafa"
...
